crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_hard_break_backslash_gfm.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..33
  PARAGRAPH@0..10
    TEXT@0..3 "foo"
    HARD_LINE_BREAK@3..6 " \\\n"
    TEXT@6..9 "bar"
    NEWLINE@9..10 "\n"
  BLANK_LINE@10..11
    BLANK_LINE@10..11 "\n"
  PARAGRAPH@11..23
    TEXT@11..14 "qux"
    HARD_LINE_BREAK@14..18 "  \\\n"
    TEXT@18..22 "quux"
    NEWLINE@22..23 "\n"
  BLANK_LINE@23..24
    BLANK_LINE@23..24 "\n"
  PARAGRAPH@24..33
    EMPHASIS@24..27
      EMPHASIS_MARKER@24..25 "*"
      TEXT@25..26 "a"
      EMPHASIS_MARKER@26..27 "*"
    HARD_LINE_BREAK@27..31 " \t\\\n"
    TEXT@31..32 "b"
    NEWLINE@32..33 "\n"
