crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_hard_break_backslash_whitespace_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..54
  PARAGRAPH@0..10
    TEXT@0..3 "foo"
    HARD_LINE_BREAK@3..6 " \\\n"
    TEXT@6..9 "bar"
    NEWLINE@9..10 "\n"
  BLANK_LINE@10..11
    BLANK_LINE@10..11 "\n"
  PARAGRAPH@11..23
    TEXT@11..14 "qux"
    HARD_LINE_BREAK@14..18 "  \\\n"
    TEXT@18..22 "quux"
    NEWLINE@22..23 "\n"
  BLANK_LINE@23..24
    BLANK_LINE@23..24 "\n"
  PARAGRAPH@24..33
    EMPHASIS@24..27
      EMPHASIS_MARKER@24..25 "*"
      TEXT@25..26 "a"
      EMPHASIS_MARKER@26..27 "*"
    HARD_LINE_BREAK@27..31 " \t\\\n"
    TEXT@31..32 "b"
    NEWLINE@32..33 "\n"
  BLANK_LINE@33..34
    BLANK_LINE@33..34 "\n"
  HEADING@34..40
    ATX_HEADING_MARKER@34..35
      ATX_HEADING_MARKER@34..35 "#"
    WHITESPACE@35..36 " "
    HEADING_CONTENT@36..39
      TEXT@36..39 "c \\"
    NEWLINE@39..40 "\n"
  PARAGRAPH@40..42
    TEXT@40..41 "d"
    NEWLINE@41..42 "\n"
  BLANK_LINE@42..43
    BLANK_LINE@42..43 "\n"
  PARAGRAPH@43..54
    TEXT@43..53 "trailing \\"
    NEWLINE@53..54 "\n"
