crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_headerless_table.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..200
  SIMPLE_TABLE@0..200
    TABLE_SEPARATOR@0..40
      TABLE_SEP_DASHES@0..7 "-------"
      TABLE_SEP_WHITESPACE@7..12 "     "
      TABLE_SEP_DASHES@12..18 "------"
      TABLE_SEP_WHITESPACE@18..19 " "
      TABLE_SEP_DASHES@19..29 "----------"
      TABLE_SEP_WHITESPACE@29..32 "   "
      TABLE_SEP_DASHES@32..39 "-------"
      NEWLINE@39..40 "\n"
    TABLE_ROW@40..80
      WHITESPACE@40..45 "     "
      TABLE_CELL@45..47
        TEXT@45..47 "12"
      WHITESPACE@47..52 "     "
      TABLE_CELL@52..54
        TEXT@52..54 "12"
      WHITESPACE@54..62 "        "
      TABLE_CELL@62..64
        TEXT@62..64 "12"
      WHITESPACE@64..77 "             "
      TABLE_CELL@77..79
        TEXT@77..79 "12"
      NEWLINE@79..80 "\n"
    TABLE_ROW@80..120
      WHITESPACE@80..84 "    "
      TABLE_CELL@84..87
        TEXT@84..87 "123"
      WHITESPACE@87..92 "     "
      TABLE_CELL@92..95
        TEXT@92..95 "123"
      WHITESPACE@95..102 "       "
      TABLE_CELL@102..105
        TEXT@102..105 "123"
      WHITESPACE@105..116 "           "
      TABLE_CELL@116..119
        TEXT@116..119 "123"
      NEWLINE@119..120 "\n"
    TABLE_ROW@120..160
      WHITESPACE@120..126 "      "
      TABLE_CELL@126..127
        TEXT@126..127 "1"
      WHITESPACE@127..132 "     "
      TABLE_CELL@132..133
        TEXT@132..133 "1"
      WHITESPACE@133..143 "          "
      TABLE_CELL@143..144
        TEXT@143..144 "1"
      WHITESPACE@144..158 "              "
      TABLE_CELL@158..159
        TEXT@158..159 "1"
      NEWLINE@159..160 "\n"
    TABLE_SEPARATOR@160..200
      TABLE_SEP_DASHES@160..167 "-------"
      TABLE_SEP_WHITESPACE@167..172 "     "
      TABLE_SEP_DASHES@172..178 "------"
      TABLE_SEP_WHITESPACE@178..179 " "
      TABLE_SEP_DASHES@179..189 "----------"
      TABLE_SEP_WHITESPACE@189..192 "   "
      TABLE_SEP_DASHES@192..199 "-------"
      NEWLINE@199..200 "\n"
