crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_heading_attributes_gated_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
assertion_line: 111
expression: cst_output
---
DOCUMENT@0..110
  HEADING@0..20
    ATX_HEADING_MARKER@0..1
      ATX_HEADING_MARKER@0..1 "#"
    WHITESPACE@1..2 " "
    HEADING_CONTENT@2..19
      TEXT@2..19 "ATX heading {#id}"
    NEWLINE@19..20 "\n"
  BLANK_LINE@20..21
    BLANK_LINE@20..21 "\n"
  HEADING@21..73
    HEADING_CONTENT@21..46
      TEXT@21..46 "Setext heading {#id . ..."
    NEWLINE@46..47 "\n"
    SETEXT_HEADING_UNDERLINE@47..72
      SETEXT_HEADING_UNDERLINE@47..72 "===================== ..."
    NEWLINE@72..73 "\n"
  BLANK_LINE@73..74
    BLANK_LINE@73..74 "\n"
  HEADING@74..110
    ATX_HEADING_MARKER@74..76
      ATX_HEADING_MARKER@74..76 "##"
    WHITESPACE@76..77 " "
    HEADING_CONTENT@77..106
      TEXT@77..106 "Run in front of a blo ..."
    WHITESPACE@106..107 " "
    ATX_HEADING_MARKER@107..109 "##"
    NEWLINE@109..110 "\n"
