crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_heading_trailing_backslash_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..48
  HEADING@0..7
    ATX_HEADING_MARKER@0..1
      ATX_HEADING_MARKER@0..1 "#"
    WHITESPACE@1..2 " "
    HEADING_CONTENT@2..6
      TEXT@2..6 "foo\\"
    NEWLINE@6..7 "\n"
  BLANK_LINE@7..8
    BLANK_LINE@7..8 "\n"
  HEADING@8..17
    ATX_HEADING_MARKER@8..10
      ATX_HEADING_MARKER@8..10 "##"
    WHITESPACE@10..11 " "
    HEADING_CONTENT@11..16
      TEXT@11..14 "bar"
      ESCAPED_CHAR@14..16 "\\\\"
    NEWLINE@16..17 "\n"
  BLANK_LINE@17..18
    BLANK_LINE@17..18 "\n"
  HEADING@18..29
    ATX_HEADING_MARKER@18..21
      ATX_HEADING_MARKER@18..21 "###"
    WHITESPACE@21..22 " "
    HEADING_CONTENT@22..28
      TEXT@22..25 "baz"
      ESCAPED_CHAR@25..27 "\\\\"
      TEXT@27..28 "\\"
    NEWLINE@28..29 "\n"
  BLANK_LINE@29..30
    BLANK_LINE@29..30 "\n"
  HEADING@30..37
    ATX_HEADING_MARKER@30..34
      ATX_HEADING_MARKER@30..34 "####"
    WHITESPACE@34..35 " "
    HEADING_CONTENT@35..36
      TEXT@35..36 "\\"
    NEWLINE@36..37 "\n"
  BLANK_LINE@37..38
    BLANK_LINE@37..38 "\n"
  HEADING@38..48
    HEADING_CONTENT@38..43
      TEXT@38..43 "quux\\"
    NEWLINE@43..44 "\n"
    SETEXT_HEADING_UNDERLINE@44..47
      SETEXT_HEADING_UNDERLINE@44..47 "---"
    NEWLINE@47..48 "\n"
